# OpenGLFW

./: CMakeLists.txt  data.h  main.cpp  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h
shaders/: basic.fsh  basic.vsh
